Method resolution type parameter fix for TestMethodCall7,7, second part; added infinite loop protection to GenericsHelper.translateMap